// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event component should display correctly a failed event for a Recharge Charge action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon danger"
        title="Fail"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </div>
      <span
        className="actionName"
      >
        Skip charge
         
         
        <a
          href="https://my-store.myshopify.com/tools/recurring/customers/sd478fs57dfds4f1/orders"
          rel="noopener noreferrer"
          target="_blank"
        >
          8
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Recharge
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="error"
      >
        <b
          className="text-danger"
        >
          Error:
        </b>
         
        the error is real
      </div>
      <div
        key="payload"
      >
        <div>
          <div
            key="subscription_id"
          >
            <b>
              Subscription id
            </b>
            : 
            6
          </div>
          <div
            key="charge_id"
          >
            <b>
              Charge id
            </b>
            : 
            8
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a failed event for a Recharge Subscription action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon danger"
        title="Fail"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </div>
      <span
        className="actionName"
      >
        Cancel subscription
         
         
        <a
          href="https://my-store.myshopify.com/tools/recurring/customers/sd478fs57dfds4f1/subscriptions/6"
          rel="noopener noreferrer"
          target="_blank"
        >
          6
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Recharge
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="error"
      >
        <b
          className="text-danger"
        >
          Error:
        </b>
         
        the error is real
      </div>
      <div
        key="payload"
      >
        <div>
          <div
            key="subscription_id"
          >
            <b>
              Subscription id
            </b>
            : 
            6
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a failed event for a Shopify Item action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon danger"
        title="Fail"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </div>
      <span
        className="actionName"
      >
        Refund item
         
         
        <a
          href="https://my-store.myshopify.com/admin/orders/3"
          rel="noopener noreferrer"
          target="_blank"
        >
          2 × Beautiful butterfly
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Shopify
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="error"
      >
        <b
          className="text-danger"
        >
          Error:
        </b>
         
        the error is real
      </div>
      <div
        key="payload"
      >
        <div>
          <div
            key="order_id"
          >
            <b>
              Order id
            </b>
            : 
            3
          </div>
          <div
            key="item_id"
          >
            <b>
              Item id
            </b>
            : 
            5
          </div>
          <div
            key="quantity"
          >
            <b>
              Quantity
            </b>
            : 
            2
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a failed event for a Shopify Order action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon danger"
        title="Fail"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </div>
      <span
        className="actionName"
      >
        Full refund order
         
         
        <a
          href="https://my-store.myshopify.com/admin/orders/3"
          rel="noopener noreferrer"
          target="_blank"
        >
          #1234
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Shopify
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="error"
      >
        <b
          className="text-danger"
        >
          Error:
        </b>
         
        the error is real
      </div>
      <div
        key="payload"
      >
        <div>
          <div
            key="order_id"
          >
            <b>
              Order id
            </b>
            : 
            3
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a successful event for a Recharge Charge action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon success"
        title="Success"
      >
        <i
          className="material-icons"
        >
          check
        </i>
      </div>
      <span
        className="actionName"
      >
        Skip charge
         
         
        <a
          href="https://my-store.myshopify.com/tools/recurring/customers/sd478fs57dfds4f1/orders"
          rel="noopener noreferrer"
          target="_blank"
        >
          8
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Recharge
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="payload"
      >
        <div>
          <div
            key="subscription_id"
          >
            <b>
              Subscription id
            </b>
            : 
            6
          </div>
          <div
            key="charge_id"
          >
            <b>
              Charge id
            </b>
            : 
            8
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a successful event for a Recharge Subscription action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon success"
        title="Success"
      >
        <i
          className="material-icons"
        >
          check
        </i>
      </div>
      <span
        className="actionName"
      >
        Cancel subscription
         
         
        <a
          href="https://my-store.myshopify.com/tools/recurring/customers/sd478fs57dfds4f1/subscriptions/6"
          rel="noopener noreferrer"
          target="_blank"
        >
          6
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Recharge
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="payload"
      >
        <div>
          <div
            key="subscription_id"
          >
            <b>
              Subscription id
            </b>
            : 
            6
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a successful event for a Shopify Item action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon success"
        title="Success"
      >
        <i
          className="material-icons"
        >
          check
        </i>
      </div>
      <span
        className="actionName"
      >
        Refund item
         
         
        <a
          href="https://my-store.myshopify.com/admin/orders/3"
          rel="noopener noreferrer"
          target="_blank"
        >
          2 × Beautiful butterfly
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Shopify
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="payload"
      >
        <div>
          <div
            key="order_id"
          >
            <b>
              Order id
            </b>
            : 
            3
          </div>
          <div
            key="item_id"
          >
            <b>
              Item id
            </b>
            : 
            5
          </div>
          <div
            key="quantity"
          >
            <b>
              Quantity
            </b>
            : 
            2
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`Event component should display correctly a successful event for a Shopify Order action 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon success"
        title="Success"
      >
        <i
          className="material-icons"
        >
          check
        </i>
      </div>
      <span
        className="actionName"
      >
        Full refund order
         
         
        <a
          href="https://my-store.myshopify.com/admin/orders/3"
          rel="noopener noreferrer"
          target="_blank"
        >
          #1234
        </a>
      </span>
      <span
        className="equalFiller"
      >
        on
      </span>
      <span
        className="actionName"
      >
        Shopify
         (
        my-store
        )
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        avatar={false}
        className=""
        name="Acme Support"
        profilePictureUrl=""
      />
      <Button
        className="more"
        color="link"
        onClick={[Function]}
        tag="button"
        title="More details"
      >
        <i
          className="material-icons md-2"
        >
          expand_more
        </i>
      </Button>
    </div>
    <DatetimeLabel
      className="date text-faded"
      dateTime="2017-12-07T01:01:34.502206+00:00"
      settings={
        Object {
          "position": "top left",
        }
      }
    />
  </div>
  <Card
    className="details d-none"
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        key="payload"
      >
        <div>
          <div
            key="order_id"
          >
            <b>
              Order id
            </b>
            : 
            3
          </div>
        </div>
      </div>
    </CardBody>
  </Card>
</div>
`;
